Update about and minor fixes

--- a/about-pawanraj.html
+++ b/about-pawanraj.html
@@ -22,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
     <!--[if lte IE 8]><link rel="stylesheet" href="/css/ie/v8.css" /><![endif]-->
     <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie/v9.css" /><![endif]-->
-     <title>About Me | Pawanraj Sadhwani </title>
+     <title>Hi! I am Pawanraj! | Pawanraj Sadhwani </title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width"> </head>
 
@@ -60,8 +60,13 @@
                         </li>
                      </ul>
                 </li>
-                 <li><a href="/about-me">About Me</a></li>
-                 <li><a href="/docs/pgs_resume.pdf" class="button special">Resume</a></li>
+ 
+                            <li  class="active" >
+                                <a href="/about-pawanraj">About</a>
+                            </li>
+ 
+
+                <li><a href="/docs/pgs_resume.pdf" class="button special">Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -71,9 +76,18 @@
 
     <header class="special container">
         <span class="icon fa-user"></span>
-        <h2>About Me</h2>
-        <!-- add page sub title here -->
-    </header>
+        <h2>Hi! I am Pawanraj!</h2>
+<ul class="icons">
+    <li>
+        <a href="https://twitter.com/pawanrajs" class="icon circle fa fa-twitter"><span class="label">twitter</span></a>
+    </li>
+    <li>
+        <a href="https://www.linkedin.com/in/pawanrajs/" class="icon circle fa fa-linkedin"><span class="label">linkedin</span></a>
+    </li>
+    <li>
+        <a href="mailto:pawanraj@gmail.com" class="icon circle fa fa-envelope"><span class="label">envelope</span></a>
+    </li>
+</ul>    </header>
 
     <!-- One -->
     <section class="wrapper style4 container">
@@ -81,12 +95,14 @@
         <!-- Content -->
         <div class="content">
             <section>
-                <!-- <a href="#" class="image feature"><img src="images/pic04.jpg" alt="" /></a> -->
-                <p><p>A technology consultant since 2006, I have advised and enabled Fortune 500 companies in healthcare, retail, manufacturing and financial services improve IT outcomes.</p>
-<p>My <a href="/docs/pgs_resume.pdf">experience</a> spans IT strategy advisory, large IT program delivery, process assessments, organization transformation, change management, and software development.</p>
-<p>Equally at home in small co-located teams as well as distributed culturally diverse teams, I have worked in Europe, US and India.</p>
+                <div class="image feature">
+                    <img src="images/about_me.jpg" alt="" />
+                </div>
+                <p><p>My name is Pawanraj Sadhwani. A technology consultant since 2006, I have advised and enabled Fortune 500 companies in healthcare, retail, manufacturing and financial services improve IT outcomes.</p>
+<p>My <a href="/docs/pgs_resume.pdf">experience</a> spans IT strategy advisory, large IT program delivery, process assessments, organization transformation, change management, and software development. I'm equally at home in small co-located teams as well as distributed culturally diverse teams, and have worked in Europe, US and India. </p>
 <p>When not helping clients, I enjoy cheering on Manchester United, running half marathons, learning more about physical fitness and technology.</p>
-<p>Occasionally, I write about <a href="/category/technology">technology</a>, have <a href="/category/conversations-with-myself">conversations with myself</a>, and indulge <a href="/category/scribbles">random</a> <a href="/category/personal">musings</a>.</p></p>
+<p>Occasionally, I write about <a href="/category/technology">technology</a>, have <a href="/category/conversations-with-myself">conversations with myself</a>, and indulge <a href="/category/scribbles">random</a> <a href="/category/personal">musings</a>.</p>
+<p>Thank you for visiting!</p></p>
             </section>
         </div>
 
