--- a/index2.html
+++ b/index2.html
@@ -89,8 +89,13 @@
                         </li>
                      </ul>
                 </li>
-                 <li><a href="/about-me">About Me</a></li>
-                 <li><a href="/docs/pgs_resume.pdf" class="button special">Resume</a></li>
+ 
+                            <li >
+                                <a href="/about-pawanraj">About</a>
+                            </li>
+ 
+
+                <li><a href="/docs/pgs_resume.pdf" class="button special">Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -117,19 +122,19 @@
         <div class="9u">
 
             <header>
-                <h2>Featured - <strong>This way and That...</strong></h2>
+                <h2>Featured - <strong>Book Review: The Source by James A. Michener</strong></h2>
             </header>
-            <p>So, imagine this. You&#39;re walking on this road. Just you. All alone. You cannot turn back. You cannot sit down. You have nowhere else to go. You have nowhere to turn. And so, you must walk the direc</p>
+            <p>&lt;a href=&#34;http://www.goodreads.com/book/show/</p>
             <footer>
                 <ul class="buttons">
-                    <li><a href="/posts/this-way-and-that" class="button">Read More</a></li>
+                    <li><a href="/posts/book-review-the-source-james-michener" class="button">Read More</a></li>
                 </ul>
             </footer>
 
         </div>
         <div class="3u skel-cell-important">
             <ul class="feature-icons">
-                <li><span class="icon fa-arrows-h"><span class="label">This way and That...</span></span>
+                <li><span class="icon fa-book"><span class="label">Book Review: The Source by James A. Michener</span></span>
                 </li>
             </ul>
         </div>
