--- a/index3.html
+++ b/index3.html
@@ -89,8 +89,13 @@
                         </li>
                      </ul>
                 </li>
-                 <li><a href="/about-me">About Me</a></li>
-                 <li><a href="/docs/pgs_resume.pdf" class="button special">Resume</a></li>
+ 
+                            <li >
+                                <a href="/about-pawanraj">About</a>
+                            </li>
+ 
+
+                <li><a href="/docs/pgs_resume.pdf" class="button special">Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -117,19 +122,19 @@
         <div class="9u">
 
             <header>
-                <h2>Featured - <strong>Book Review: King, Queen, Knave by Vladimir Nabokov</strong></h2>
+                <h2>Featured - <strong>Not Today</strong></h2>
             </header>
-            <p>King, Queen, Knave (Amazon) is a Vladimir Nabokov novel, originally written in Russian (Koro</p>
+            <p>Something is troubling you. You do not know what it is. You cannot pinpoint it. You try to turn the dial to bring into sharp focus the spectrum of emotions so you can hear them clearly - but</p>
             <footer>
                 <ul class="buttons">
-                    <li><a href="/posts/book-review-king-queen-knave-nabokov" class="button">Read More</a></li>
+                    <li><a href="/posts/not-today" class="button">Read More</a></li>
                 </ul>
             </footer>
 
         </div>
         <div class="3u skel-cell-important">
             <ul class="feature-icons">
-                <li><span class="icon fa-book"><span class="label">Book Review: King, Queen, Knave by Vladimir Nabokov</span></span>
+                <li><span class="icon fa-frown-o"><span class="label">Not Today</span></span>
                 </li>
             </ul>
         </div>
