--- a/index.html
+++ b/index.html
@@ -89,8 +89,13 @@
                         </li>
                      </ul>
                 </li>
-                 <li><a href="/about-me">About Me</a></li>
-                 <li><a href="/docs/pgs_resume.pdf" class="button special">Resume</a></li>
+ 
+                            <li >
+                                <a href="/about-pawanraj">About</a>
+                            </li>
+ 
+
+                <li><a href="/docs/pgs_resume.pdf" class="button special">Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -117,19 +122,19 @@
         <div class="9u">
 
             <header>
-                <h2>Featured - <strong>Growing up.</strong></h2>
+                <h2>Featured - <strong>Jump!</strong></h2>
             </header>
-            <p>It&#39;s been an interesting three months... My folks came to visit me, here in the States. While my father had been to the USA before, it was a first for mom. I saw them after a year, so that w</p>
+            <p>Reflecting on my life the last few days, usually left me slightly saddened. It sometimes felt like God is in one of His moods and I&#39;m the ant who is caught under His magnifying glass. The idea of a</p>
             <footer>
                 <ul class="buttons">
-                    <li><a href="/posts/growing-up" class="button">Read More</a></li>
+                    <li><a href="/posts/jump" class="button">Read More</a></li>
                 </ul>
             </footer>
 
         </div>
         <div class="3u skel-cell-important">
             <ul class="feature-icons">
-                <li><span class="icon fa-smile-o"><span class="label">Growing up.</span></span>
+                <li><span class="icon fa-smile-o"><span class="label">Jump!</span></span>
                 </li>
             </ul>
         </div>
