--- a/index6.html
+++ b/index6.html
@@ -89,8 +89,13 @@
                         </li>
                      </ul>
                 </li>
-                 <li><a href="/about-me">About Me</a></li>
-                 <li><a href="/docs/pgs_resume.pdf" class="button special">Resume</a></li>
+ 
+                            <li >
+                                <a href="/about-pawanraj">About</a>
+                            </li>
+ 
+
+                <li><a href="/docs/pgs_resume.pdf" class="button special">Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -117,19 +122,19 @@
         <div class="9u">
 
             <header>
-                <h2>Featured - <strong>We all Need the Eggs...</strong></h2>
+                <h2>Featured - <strong>The Power of Stories...</strong></h2>
             </header>
-            <p>My parents have been here for the last couple of weeks. It&#39;s nice to see them after about a year. Not because there is so much to talk about but even in silence, there is a sense of belonging. The</p>
+            <p>I have been reading The Story Bible by Pearl Buck. It is The Bible, but without (most of) the &#34;religious stu</p>
             <footer>
                 <ul class="buttons">
-                    <li><a href="/posts/we-all-need-the-eggs" class="button">Read More</a></li>
+                    <li><a href="/posts/the-power-of-stories" class="button">Read More</a></li>
                 </ul>
             </footer>
 
         </div>
         <div class="3u skel-cell-important">
             <ul class="feature-icons">
-                <li><span class="icon fa-smile-o"><span class="label">We all Need the Eggs...</span></span>
+                <li><span class="icon fa-book"><span class="label">The Power of Stories...</span></span>
                 </li>
             </ul>
         </div>
