--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
             <h2>Pawanraj Sadhwani</h2>
         </header>
 
-        <p>
-            <a href="/docs/pgs_resume.pdf">Tech consultant</a>. <a href="#latest_posts">Scribbles ocassionally</a>.
-        </p>
+            <p><a href="/docs/pgs_resume.pdf">Tech consultant</a>. <a href="#latest_posts">Scribbles ocassionally</a>.</p>
 
         <!--
         <footer>
@@ -27,14 +25,18 @@
 
     </div>
 
-</section><html>
+</section><!DOCTYPE html>
+<html>
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-    <script src="/js/jquery.min.js"></script>
+
+        <link href="/./tipuesearch/tipuesearch.css" rel="stylesheet"> 
+
+    <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/js/jquery.dropotron.min.js"></script>
     <script src="/js/skel.min.js"></script>
     <script src="/js/skel-layers.min.js"></script>
@@ -47,7 +49,7 @@
     </noscript>
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/css/personalize.css" rel="stylesheet" type="text/css" />
+    <link href="/./css/personalize.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
     <!--[if lte IE 8]><link rel="stylesheet" href="/css/ie/v8.css" /><![endif]-->
     <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie/v9.css" /><![endif]-->
@@ -62,15 +64,15 @@
     <!-- Header -->
     <header id="header" class="alt" >
         <h1 class="logo">
-            <a href="/">Pawanraj Sadhwani</a>
+<img src="/images/headlogo.png" width="25"/>             <a href="/">Pawanraj Sadhwani</a>
         </h1>
         <nav id="nav">
             <ul>
                 <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
+                <li><a href="search">Search</a></li>
                 <li><a href="/archives">Archives</a></li>
-                <li><a href="/tags">Tags</a></li>
                 <li class="submenu">
-                    <a href="/">Blog</a>
+                    <a href="/archives">Blog</a>
                     <ul>
                          <li >
                             <a href="/category/conversations-with-myself">Conversations with myself</a>
@@ -105,7 +107,7 @@
 
     <header class="special container">
         <span class="icon fa-handshake-o"></span>
-        <h2><strong>Pawanraj Sadhwani</strong></h2>
+        <h2><strong>Hi! I am Pawanraj Sadhwani</strong></h2>
 
         <p>
             I <strong><a href="/docs/pgs_resume.pdf">consult</a></strong> businesses on technology strategy.<br /> I also run half marathons and cheer Manchester United. <br /> I sometimes write about
@@ -116,30 +118,7 @@
         </p>
     </header>
 
-<!-- Random Post to be added in featuredpost.html -->
- <section class="wrapper style2 container special-alt">
-    <div class="row half">
-        <div class="9u">
-
-            <header>
-                <h2>Featured - <strong>Jump!</strong></h2>
-            </header>
-            <p>Reflecting on my life the last few days, usually left me slightly saddened. It sometimes felt like God is in one of His moods and I&#39;m the ant who is caught under His magnifying glass. The idea of a</p>
-            <footer>
-                <ul class="buttons">
-                    <li><a href="/posts/jump" class="button">Read More</a></li>
-                </ul>
-            </footer>
-
-        </div>
-        <div class="3u skel-cell-important">
-            <ul class="feature-icons">
-                <li><span class="icon fa-smile-o"><span class="label">Jump!</span></span>
-                </li>
-            </ul>
-        </div>
-    </div>
-</section>    <!-- Two -->
+    <!-- Two -->
     <section class="wrapper style1 container special">
         <div class="row" id="latest_posts">
 
@@ -266,7 +245,9 @@
     <span class="copyright">&copy; Pawanraj Sadhwani. All rights reserved. <br>
       Design: Inspired by <a href="https://html5up.net/twenty">Twenty</a>, by <a href="http://html5up.net">HTML5 UP</a>.</span>
 
-</footer>
+</footer>    
+    <!-- add scripts for search here in search.html -->
+
 </body>
 
 </html>
