--- a/archives3.html
+++ b/archives3.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -5,7 +6,10 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-    <script src="/js/jquery.min.js"></script>
+
+        <link href="/./tipuesearch/tipuesearch.css" rel="stylesheet"> 
+
+    <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/js/jquery.dropotron.min.js"></script>
     <script src="/js/skel.min.js"></script>
     <script src="/js/skel-layers.min.js"></script>
@@ -18,7 +22,7 @@
     </noscript>
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/css/personalize.css" rel="stylesheet" type="text/css" />
+    <link href="/./css/personalize.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
     <!--[if lte IE 8]><link rel="stylesheet" href="/css/ie/v8.css" /><![endif]-->
     <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie/v9.css" /><![endif]-->
@@ -33,15 +37,15 @@
     <!-- Header -->
     <header id="header" >
         <h1 class="logo">
-            <a href="/">Pawanraj Sadhwani</a>
+<img src="/images/headlogo.png" width="25"/>             <a href="/">Pawanraj Sadhwani</a>
         </h1>
         <nav id="nav">
             <ul>
                 <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
+                <li><a href="search">Search</a></li>
                 <li><a href="/archives">Archives</a></li>
-                <li><a href="/tags">Tags</a></li>
                 <li class="submenu">
-                    <a href="/">Blog</a>
+                    <a href="/archives">Blog</a>
                     <ul>
                          <li >
                             <a href="/category/conversations-with-myself">Conversations with myself</a>
@@ -167,6 +171,24 @@
 
                 <!-- Sidebar -->
                 <div class="sidebar">
+
+                    <!-- To add search section or not -->
+                        <section>
+                            <header>
+                                <h3>Search</h3>
+                            </header>
+                            <span>
+                                <form action="search">
+                                    <div class="tipue_search_group">
+                                        <input type="text" class="search-query" id="tipue_search_input" placeholder="Search" name="q" required onsubmit="return validateForm(this.elements['q'].value);">
+                                        <button type="submit" class="button special search-button tipue_search_button">
+                                            <div class="tipue_search_icon">&#9906;</div>
+                                        </button>
+                                    </div>
+                                </form>
+                            </span>
+                        </section>
+
                     <section>
                         <header>
                             <h3>All Tags</h3>
@@ -344,7 +366,9 @@
     <span class="copyright">&copy; Pawanraj Sadhwani. All rights reserved. <br>
       Design: Inspired by <a href="https://html5up.net/twenty">Twenty</a>, by <a href="http://html5up.net">HTML5 UP</a>.</span>
 
-</footer>
+</footer>    
+    <!-- add scripts for search here in search.html -->
+
 </body>
 
 </html>
